{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 30,
  "lineage": "7bfb7ccc-fdf6-8f81-82b5-cd4f068fbf68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ipfs_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ceramic_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434945220844:security-group/sg-0d86c147f8af6056f",
            "description": "Allow inbound traffic from the internet to ceramic",
            "egress": [],
            "id": "sg-0d86c147f8af6056f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from the internet to ceramic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7007
              }
            ],
            "name": "ceramic security group",
            "name_prefix": "",
            "owner_id": "434945220844",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089f6a6ced1601130"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ipfs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:434945220844:security-group/sg-03ddd0cc214b4fe69",
            "description": "Allow inbound traffic from the internet to ipfs",
            "egress": [],
            "id": "sg-03ddd0cc214b4fe69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from the internet to ipfs api port",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from the internet to ipfs healthcheck port",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8011
              }
            ],
            "name": "ipfs security group",
            "name_prefix": "",
            "owner_id": "434945220844",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089f6a6ced1601130"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}